<resources>
    <string name="app_name">Chat App</string>
    <string name="loginwelcome">WELCOME TO MY CHAT APP</string>
    <string name="creatActBTn">CREATE A NEW ACCOUNT</string>
    <string name="createActBTn">CREATE NEW ACCOUNT</string>
    <string name="Loginbtn">ALREADY HAVE AN ACCOUNT?</string>
    <string name="entaMail">ENTER EMAIL</string>
    <string name="entausername">ENTER NAME</string>
    <string name="entaPaswrd">ENTER PASSWORD </string>
    <string name="entayourstatus">ENTER YOUR STATUS </string>
    <string name="login">Login</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">chats</string>
    <string name="Users">users</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="hello">Hello Friends....</string>
    <string name="changepix" />
    <string name="changePix">Change Picture</string>
    <string name="changeStat">Change Status</string>
</resources>