<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".CreatAccountActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="330dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="13dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/cardviewcreataccID">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/teal_700"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/creatActImgviewID"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/chat_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crtActTVID"
                android:text="@string/creatActBTn"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="10dp">
                <EditText
                    android:id="@+id/crtActdisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entausername"
                    android:paddingBottom="6dp"
                    android:textColor="#f0f7f4"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:inputType="textPersonName"
                    android:background="@drawable/selector_bg_edit_2"/>

                <EditText
                    android:paddingBottom="6dp"
                    android:textColor="#f0f7f4"
                    android:id="@+id/crtActEmailEtID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:hint="@string/entaMail"
                    android:background="@drawable/selector_bg_edit_2"/>

                <EditText
                    android:paddingBottom="6dp"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:id="@+id/crtActPaswrdEtID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:hint="@string/entaPaswrd"
                    android:background="@drawable/selector_bg_edit_2"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="15dp">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/crtnewaccBtnID"
                    android:textColor="#d3d3d3"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:textSize="13dp"
                    android:text="@string/createActBTn"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>