<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.settingsActivity">

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/settprofileID"
      android:layout_width="150dp"
      android:layout_height="120dp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/settDisplayID"
      android:layout_width="228dp"
      android:layout_height="39dp"
      android:layout_marginTop="32dp"
      android:text="Display Name"
      android:textColor="@color/black"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/settprofileID" />

  <TextView
      android:id="@+id/settstatusTVID"
      android:layout_width="301dp"
      android:layout_height="18dp"
      android:layout_marginTop="16dp"
      android:text="@string/hello"
      android:textAlignment="center"
      android:textColor="#A89999"
      android:textStyle="bold|italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/settDisplayID" />

  <Button
      android:id="@+id/settChangePixButnID"
      android:layout_width="241dp"
      android:layout_height="54dp"
      android:layout_marginTop="64dp"
      android:text="@string/changePix"
      android:textColor="@color/black"
      android:background="@drawable/bt_shape"
      android:stateListAnimator="@drawable/state_list_animator_z"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/settstatusTVID" />

  <Button
      android:id="@+id/settChangeStatusButnID"
      android:layout_width="236dp"
      android:layout_height="57dp"
      android:stateListAnimator="@drawable/state_list_animator_z"
      android:background="@drawable/bt_shape"
      android:layout_marginTop="12dp"
      android:text="@string/changeStat"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/settChangePixButnID" />

</androidx.constraintlayout.widget.ConstraintLayout>