<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp">

        <LinearLayout

            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/colorIndivateTab">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:background="@drawable/selector_bg_edit_2"
                    android:id="@+id/loginEmailETID"
                    android:inputType="textEmailAddress"
                    android:textColor="#f0f7f4"
                    android:hint="@string/entaMail"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:textSize="14sp"
                    android:paddingTop="15dp"
                    android:textColor="#f0f7f4"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:background="@drawable/selector_bg_edit_2"
                    android:id="@+id/loginPaswrdETID"
                    android:hint="@string/entaPaswrd"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textColor="#d3d3d3"
                    android:layout_marginLeft="40dp"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:background="@drawable/bt_shape"
                    android:id="@+id/loginButtonId"/>



            </LinearLayout>









        </LinearLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>